# hypercube-ml

./: .gitmodules  LICENSE  README.md  pyproject.toml  reproduce_results.md  requirements.txt
experiments/: reproduce_results.md
experiments/family_overlap/: overlap_computer.py  plot_family_overlap.py  plotter.py
experiments/temporal_luck/aut/: compute_all_auts.py
experiments/temporal_luck/motivational/: evaluate_all.py  evaluate_models.py  motivational_plots.py  train_all.py  train_models.py
experiments/timestamps/experiment_1/: dataset_sampler.py  figure_3_generator.py
experiments/timestamps/experiment_2/: distribution_encoder.py  dtw.py  table_2_generator.py  table_3_generator.py
hypercube/: utils.py
hypercube/stas/: margin_of_error_sampling.py  sampler.py
hypercube/stas/tests/: margin_of_error_tests.py  stas_sampler_tests.py
hypercube/stas/tests/data/: population_descriptor.json  population_descriptor_extended.json
hypercube/temporal_luck/: aut.py  evaluator.py  temporal_luck_evaluator.py  temporal_windows.py  trainer.py
hypercube/temporal_luck/tests/: aut_tests.py  temporal_luck_evaluator_tests.py  temporal_windows_tests.py
temporal_luck/: aut.py  evaluator.py  temporal_luck_evaluator.py  temporal_windows.py  trainer.py  utils.py
temporal_luck/tests/: aut_tests.py  temporal_luck_evaluator_tests.py  temporal_windows_tests.py  trainer_tests.py
